2016-05-18  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c: Prepare multiple TTYs.

2016-05-17  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c: Update as TTY input/output with line
	editing support.
	* example-cdc/sample.c: Likewise.
	* example-cdc/tty.h: Rename from stream.h.

	* chopstx.c (chopstx_poll): Set ->ready = 0.
	Add spinlock for ll_dequeue.

2016-05-16  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc/sys.c (nvic_enable_vector): Remove.
	(usb_lld_sys_init): Don't setup NVIC priority.
	(sys_version): sys version 3.0.

2016-05-16  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (CHOPSTX_EXIT_SUCCESS, CHOPSTX_EXIT_CANCELED)
	(CHOPSTX_EXIT_CANCELED_IN_SYNC): Remove.
	(CHOPSTX_CANCELED): New.

	* chopstx.c (chopstx_testcancel): Use CHOPSTX_CANCELED.
	(chx_sched, chx_snooze): Re-define return values cleanly.
	(chopstx_cancel): Use return value of chx_sched to cancel.
	(chopstx_cond_wait, chopstx_join, chopstx_poll): Implement
	cancellation rather easier way with return value of chx_sched.

2016-05-15  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_claim_irq): Don't register clean up function.
	(chx_release_irq): Remove.
	(chopstx_cancel): Disable IRQ when canceled at POLL.
	(chopstx_poll): Fix IRQ handling.

2016-05-13  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_handle_intr): Call chx_request_preemption.
	(chx_wakeup, chopstx_cond_signal, chopstx_cond_broadcast)
	(chx_intr_hook, chopstx_poll): Cleanup.

2016-05-13  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_exit): Don't call chx_release_irq_thread.
	(chx_release_irq_thread): Remove.
	(q_intr): New variable.
	(intr_top): Remove.
	(chx_handle_intr, chx_init, chopstx_claim_irq)
	(chopstx_intr_wait): Use Q_INTR.
	(chx_intr_hook): New.
	(chopstx_poll): Support CHOPSTX_POLL_INTR.
	(chopstx_release_irq): Remove.
	(chx_release_irq): New internal function.
	(THREAD_WAIT_INT): Remove.
	(chopstx_intr_wait): Rewrite by chopstx_poll.
